# hermes-google

./: .gitignore  Dockerfile  LICENSE  README.md  conda-env.yml  docker-compose.yml  pyproject.toml
.claude/: mcp.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-23-hermes-google-implementation.md
docs/superpowers/specs/: 2026-04-23-hermes-google-design.md  2026-04-23-hermes-workspace-design.md
scripts/: setup.sh
src/hermes_google/: __init__.py  cli.py  mcp_server.py
src/hermes_google/core/: auth.py  cal.py  config.py  drive.py  errors.py  forward.py  mail.py
tests/: conftest.py  test_auth.py  test_cal.py  test_config.py  test_drive.py  test_forward.py  test_mail.py  test_mcp_server.py
tests/fixtures/: fwd_manual_client.eml  fwd_plain_gmail_mobile.eml  fwd_plain_gmail_web.eml
